# easytrans

./: .gitignore  .tmux-tui-command  CLAUDE.md  LICENSE  PLAN.md  README.md  SPEC.md  TODO.txt  VIM-NAVIGATION.md  Vagrantfile  alembic.ini  pyproject.toml
.claude/: settings.local.json
.claude/skills/tmux-tui/: SKILL.md
.claude/skills/tmux-tui/scripts/: tui.sh
old_vagrant/: Vagrantfile
spec/: SPEC.md  TODO.txt
src/easytrans/: __init__.py  __main__.py  app.py  config.py  db.py  files.py  importer.py  models.py  playback.py  recording.py  sync.py  transcribe.py
src/easytrans/migrations/: env.py
src/easytrans/migrations/versions/: 21b5f0c5df5b_initial_schema.py  48d23cf60168_add_source_files_table.py
tests/: conftest.py  test_app.py  test_db.py  test_files.py  test_importer.py  test_playback.py  test_record_ui.py  test_recording.py  test_sync.py  test_transcribe.py
