[project]
name = "easytrans"
version = "0.1.0"
description = "Voice memo transcription management app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "textual>=0.50",
    "faster-whisper>=1.0",
    "tomli>=2.0; python_version < '3.11'",
    "alembic>=1.18.4",
    "python-mpv>=1.0",
    "sounddevice>=0.4",
    "soundfile>=0.12",
]

[project.scripts]
easytrans = "easytrans.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
# vboxsf doesn't support symlinks; use copy mode for packages
link-mode = "copy"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "/home/vagrant/.venvs"
venv = "easytrans"
